fixed small responsive error

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,7 @@
     "title": "Side projects"
   },
   "about_card": {
-    "description": "My name is Jonathan Ahrenkiel-Frellsen, I'm 23 years old and i have been programming in my spare time, school and work for the last 10 years. I have a passion for programming and I love to learn new things. I have a lot of experience with web development, but I also have experience with other types of programming. Some of the projects I have worked on I'm displaying here. If you want more information feel free to contract me."
+    "description": "My name is Jonathan Ahrenkiel-Frellsen, I'm 23 years old and i have been programming in my spare time, school and work for the last 10 years. I have a passion for programming and I love to learn new things. I have a lot of experience with web development, but I also have experience with other types of programming. Some of the projects I have worked on I'm displaying here. If you want more information feel free to contact me."
   },
   "tech_card": {
     "title": "Some technologies I have worked with",
