--- a/public/locales/dk/translation.json
+++ b/public/locales/dk/translation.json
@@ -5,6 +5,12 @@
     "subtitle": "Vælg dit sprog",
     "change_theme": "Skift sprog"
   },
+  "resume": {
+    "profile_text_title": "Hvad kan jeg tilbyde jer?",
+    "profile_text": "<b>Avancerede programmeringsfærdigheder</b>: Jeg har stor erfaring for min alder, hvilket indikerer et dybt engagement i læring og udvikling af færdigheder(, )<b>Ekspertise i fuld-stack udvikling</b>: I stand til at håndtere både front-end og back-end udviklingsopgaver, hvilket sikrer en omfattende forståelse af hele softwareudviklingslivscyklussen(, )<b>Beherskelse af flere programmeringssprog</b>: Dygtig i Python, Rust, C#, blandt andre, hvilket viser alsidighed og evnen til at tilpasse sig forskellige teknologier og projekter(, )<b>Proaktiv og energisk</b>: Bidrager med god energi til teamet, hvilket bidrager til et positivt arbejdsmiljø og driver projekter fremad med entusiasme og initiativ",
+    "about_me": "Om mig",
+    "about_me_text": "Jeg kan godt lide at spille Magic the Gathering, jeg spiller computerspil som Counter Strike 2, jeg kan godt lide at løbe og cykle, jeg kan godt lide at programmere i min fritid"
+  },
   "projects_card": {
     "title": "Projekter jeg har arbejdet på",
     "go_to": "Gå til projektets hjemmeside",
@@ -26,22 +32,27 @@
   "education_card": {
     "title": "Uddannelse"
   },
+  "contact_card": {
+    "title": "Kontact informationer",
+    "email": "Email",
+    "phone_nr": "Telefon nummer"
+  },
   "Based Capital AG": {
     "p1": "Der er flere applikationer lavet i denne virksomhed. Hovedapplikationen er en kodebase til at køre handelsstrategier på kryptomarkeder. Den understøtter teknisk og sentimentel analyse, én strategi kan bruge data fra flere markeder, og mere avancerede lys (som volumenlys) understøttes. Bots lanceret med kodebasen kan også kontrolleres via telegram. Kodebasens hovedfokus er hurtig udvikling, udrulning og eksekvering. Denne kodebase blev lavet i python. En backtester lavet i rust blev også lavet, da tørkørsel af en strategi i en python-kodebase er langsom.",
     "p2": "Her er nogle af de kommandoer, der kan bruges til at kommunikere med de lancerede bots.",
     "p3": "Her er et eksempel på en liste funktion for at liste alle de kørende bots",
     "p4": "I python-kodebasen er det muligt at plotte indikatorer og lys. Her er en video, der plotter en simpel SMA-strategi",
     "p5": "Dette er et projekt, jeg arbejdede på som lead developer. Softwaren var en python-kodebase til at køre handelsstrategier på kryptomarkeder og automatiseret market making. Jeg udviklede også en rust-backtester til strategierne. Projektet var en succes og kører stadig i dag.",
-    "description": "Dette er et projekt, jeg arbejdede på som lead developer. Softwaren var en python-kodebase til at køre handelsstrategier på kryptomarkeder og automatiseret market making. Jeg udviklede også en rust-backtester til strategierne. Projektet var en succes og kører stadig i dag."
+    "description": "• <b>Bagground af projeketet</b> Jeg er co founder og Lead developer i Based Capital AG. Based Capital AG er et swiss-baseret aktie selvskab med en værdig ansettelse på 0.5 millioner schweiziske franc• <b>Hvad har jeg lavet</b>○ Jeg har lavet en python codebase som kan køre strategier som vi har udviklet på cryptomarkeder. ○ Jeg har lavet udviklet en rust backtester som kan dry runne en strategi meget effektivt. ○ Jeg har også lavet en telegram bot som kan kontrollere de kørende bots. ○ Jeg har også lavet en hjemmeside som kan vise performance af strategierne. ○ Jeg har også lavet en market making bot som kan køre på de decentaliseret dexes."
   },
   "DTU - Chemical filtering proccesses": {
-    "description": "Dette er et projekt, jeg arbejder på deltid som konsulent. Projektet handler om at udvikle en maskinlæringsmodel til at forudsige resultatet af kemiske filtreringsprocesser. Projektet er stadig i gang."
+    "description": "• <b>Bagground af projeketet</b> Jeg arbejder deltid som konsulent for et projekt på DTU. Projektet er et research projekt som er på vej til at blive en virksomhed. • <b>Hvad har jeg lavet</b>○ Jeg har lavet en RNN model for at forudsige resultater af kemiske processer. ○ Været med til at sette server infastruktur op så modellen kan køre i produktion"
   },
   "Central Capital Solutions": {
-    "description": "Dette er et projekt til at strømline ansøgningsprocessen for lån. Jeg arbejdede på projektet som full stack-ingeniør for at udvikle en tragt for nye brugere og en portal til at håndtere vigtige dokumenter, kyc og andre oplysninger til långodkendelse. Projektet var en succes og kører stadig i dag."
+    "description": "• <b>Bagground af projeketet</b> Jeg arbejde her deltid som lønmodtager. Virksomheden specialisere sig i at gøre låne processen i cental america nemmere blandt andet ved software • <b>Hvad har jeg lavet</b>○ Jeg har lavet en portal I react hvor brugeren kan se sine informationer, underskrive documenter, uploade identification. ○ Været med til at opsette en funnel til nye kunder. ○ Jeg har lavet en AI model som kan genkende ansigter og læse pas."
   },
   "The Capital": {
-    "description": "Dette er en nyheds-/social medie webside om krypto, som jeg var en del af at udvikle. Mit ansvar for dette projekt var frontend og backend af websiden."
+    "description": "• <b>Bagground af projeketet</b> Jeg arbejde her som udvikler betalt I ejerandele og lidt løn. The Capital er en nyheds/social medie kun om crypto • <b>Hvad har jeg lavet</b>○ Jeg har været med til frontenden på webappen. ○ Jeg har være med til at lave backenden på webappen."
   },
   "Fill Out": {
     "p1": "Fill Out er et spil lavet i unity. Spillet er et puslespil, hvor du skal udfylde brættet med de rigtige former. Niveauerne genereres tilfældigt.",
